update wordle job logic